added "sharedWith" in todo response
